tests/base/parser/bad/exps/exp_t-cid-lbrace-with.scilexp
None {bool} (* Should be capitalised *)
